# qwen3-embed

./: .coderabbit.yaml  .coveragerc  .gitignore  .infisical.json  .mise.toml  .pr_agent.toml  .pre-commit-config.yaml  .release-please-manifest-beta.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HERMES_REVIEWLOOP_SELFTEST.md  NOTICE  README.md  SECURITY.md  _hermes_cifix_probe.py  branch.txt  changes.diff  code_review_request.txt  commit_msg.txt  coverage.json  coverage.xml  diff.txt  fix_model_management.py  fix_tokens.py  learning.md  merge_diff.txt  patch11.py  patch_test.py  patch_tests.py  plan.md  plan_review.md  pr_desc.txt  pr_description.md  pyproject.toml  release-please-config-beta.json  release-please-config.json  renovate.json  (+12 more)
.gemini/: styleguide.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  review-learnings.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/rulesets/: main.json
.github/scripts/: check-ci-cd-status.sh  cleanup-release-prs.sh
.github/workflows/: cd.yml  ci.yml  opencode.yml
.jules/: bolt.md  palette.md  sentinel.md
fastembed/: __init__.py  parallel_processor.py
fastembed/common/: __init__.py  model_management.py  onnx_model.py  preprocessor_utils.py  types.py  utils.py
fastembed/rerank/: __init__.py
fastembed/rerank/cross_encoder/: custom_text_cross_encoder.py  onnx_text_cross_encoder.py  onnx_text_model.py  qwen3_cross_encoder.py  text_cross_encoder.py  text_cross_encoder_base.py
fastembed/text/: custom_text_embedding.py  onnx_embedding.py  onnx_text_model.py  pooled_embedding.py  pooled_normalized_embedding.py  qwen3_embedding.py  text_embedding.py  text_embedding_base.py
qwen3_embed/: __init__.py  export.py  parallel_processor.py
qwen3_embed/common/: __init__.py  custom_model.py  model_description.py  model_management.py  onnx_model.py  preprocessor_utils.py  types.py  utils.py
qwen3_embed/rerank/: __init__.py
qwen3_embed/rerank/cross_encoder/: __init__.py  custom_text_cross_encoder.py  gguf_cross_encoder.py  onnx_text_cross_encoder.py  onnx_text_model.py  qwen3_cross_encoder.py  qwen3_shared.py  text_cross_encoder.py  text_cross_encoder_base.py
qwen3_embed/text/: __init__.py  custom_text_embedding.py  gguf_embedding.py  onnx_embedding.py  onnx_text_model.py  onnx_text_model.py.patch  pooled_embedding.py  pooled_normalized_embedding.py  qwen3_embedding.py  text_embedding.py  text_embedding_base.py
scripts/: export_optimized_reranker.py  preserve-diacritics.py  test_preserve_diacritics.py
tests/: mock_embedding_model.py  test_common_custom_model.py  test_cross_encoder_onnx.py  test_custom_cross_encoder.py  test_custom_model.py  test_custom_reranker_registry.py  test_custom_text_cross_encoder.py  test_custom_text_embedding.py  test_export.py  test_gguf_batching.py  test_gguf_cross_encoder.py  test_gguf_cross_encoder_extra.py  test_gguf_embedding.py  test_integration.py  test_integration_gguf.py  test_integration_q4f16.py  test_last_token_pool_robustness.py  test_model_check.py  test_model_description.py  test_model_management.py  test_model_management.py.orig  test_model_management_extra.py  test_model_management_internals.py  test_onnx_embed_optimization.py  test_onnx_embedding.py  test_onnx_embedding_shapes.py  test_onnx_model.py  test_onnx_model.py.patch  test_onnx_model_loading.py  test_onnx_model_optimization.py  test_onnx_text_model_error.py  test_parallel_processor.py  test_pooled_embedding.py  test_pooled_normalized_embedding.py  test_pooling.py  test_preprocessor_utils.py  test_qwen3_embedding.py  test_qwen3_reranker.py  test_qwen3_security.py  test_sanitization.py  (+18 more)
