[project]
name = "qwen3-embed"
version = "1.2.0"
description = "Lightweight Qwen3 text embedding & reranking via ONNX Runtime (fork of fastembed)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14.3"
authors = [{ name = "n24q02m" }]
keywords = ["vector", "embedding", "reranking", "qwen3", "onnx", "onnxruntime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=2.4.2",
    "onnxruntime>1.20.0",
    "tqdm>=4.67.3",
    "requests>=2.32.5",
    "tokenizers>=0.22.2,<1.0",
    "huggingface-hub>=0.36.2,<2.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
gguf = ["llama-cpp-python>=0.3.16"]

[project.urls]
Homepage = "https://github.com/n24q02m/qwen3-embed"
Repository = "https://github.com/n24q02m/qwen3-embed"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "syrupy>=4.9.1",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qwen3_embed"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore(release): v{version}"
major_on_zero = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.ty]

[tool.ty.rules]
# llama_cpp is an optional dependency (not in default venv)
unresolved-import = "warn"
# onnxruntime has incomplete type stubs (SparseTensor union issues)
possibly-missing-attribute = "warn"
invalid-argument-type = "warn"
unresolved-attribute = "warn"
not-subscriptable = "warn"
invalid-assignment = "warn"
# multiprocessing context has dynamic Process attr
call-non-callable = "warn"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # redundant with ruff format

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests requiring real ONNX model download (~1.2 GB)",
]
